--- a/content/03_Data-Exploration.ipynb
+++ b/content/03_Data-Exploration.ipynb
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {
     "tags": [
      "hide_input"
@@ -575,6 +575,8 @@
    ],
    "source": [
     "from sklearn import datasets\n",
+    "from textwrap import wrap\n",
+    "from pprint import pprint\n",
     "\n",
     "boston = datasets.load_boston()\n",
     "print(boston.DESCR)"
