smaller changes and new logo

--- a/content/03_Data-Exploration.ipynb
+++ b/content/03_Data-Exploration.ipynb
@@ -872,7 +872,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now use a different data set than Boston, because it is better suited to demonstrate the following plots. The data we now use is called the Iris data. "
+    "We now use a different data set than Boston, because it is better suited to demonstrate the following plots. The data we now use is called the [Iris data](http://archive.ics.uci.edu/ml/datasets/iris). "
    ]
   },
   {
