--- a/content/00_Preface.ipynb
+++ b/content/00_Preface.ipynb
@@ -6,10 +6,15 @@
    "source": [
     "# Preface\n",
     "\n",
-    "Welcome to this script for my data science lecture. The script provides all required learning materials in order to pass the exam. However, this script is more: it is an interactive guide for getting started with data science. All code that is used, e.g., to perform sample analysis, create visualizations, etc. is directly included in the notebook.\n",
+    "Welcome to the online book *Introduction to Data Science*. This book is created to provide a great resource for asynchronous online learning to deal with the current pandemic, where physical lectures are not possible and not all participants may be able to attend lectures, e.g., due to health issues or just because you have to care of a kid. \n",
     "\n",
+    "However, this online book is more than just a short term fix due to the pandemic. The book is an interactive guide for getting started with data science. All code that is used, e.g., to perform analysis, create visualizations, etc. is directly included and can be re-used by others.\n",
     "\n",
-    "# Prerequisites\n",
+    "## Target audience\n",
+    "\n",
+    "The primary audience are students, who visit my courses at the university. These students usually have (some) computer science background, but there are also alway interested students who have only little knowledge about computer science. The goal is that all audience who are interested in data science can follow most of the book. \n",
+    "\n",
+    "## Prerequisites\n",
     "\n",
     "In general, this course is designed to be relatively easy to follow for any student at the university level who has some affinity for working with data and ideally also the natural sciences. However, without at least some knowledge about mathematics and computer science, a complete understanding of the materials will not be possible, even though you should be able to understand most concepts. \n",
     "\n",
@@ -22,21 +27,45 @@
     "  - $x = (x_1, ..., x_d) \\in \\mathbb{R}^d$ ($x$ is a $d$-dimensional real valued vector)\n",
     "- Stochastics, especially random variables and their distributions, e.g. normal/gaussian distribution, uniform distribution, exponential distribution, and binomial distribution. Without this knowledge you will have trouble understanding certain problems with data and - sometimes - models.\n",
     "\n",
-    "# Installation of Required Software\n",
+    "## Installation of Required Software\n",
     "\n",
-    "This script is provided has HTML, PDF, and as Jupyter Notebooks. For the HTML and PDF version no special software is required. For the Jupyter Notebooks, you need a running installation of Jupyter. \n",
+    "This script is provided has Online Book and as Jupyter Notebooks. You can download the Jupyter Notebooks or each chapter using the download link at the top of the page. A PDF with the content of all chapters is also planned, but not yet available. \n",
     "\n",
-    "Python 3.6\n",
-    "scikit-learn 0.22"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " "
+    "If you want to run the script yourself, i.e., execute the code examples provided, you must install the required software. These are\n",
+    "\n",
+    "- Python 3.6 or newer.\n",
+    "- Jupyter Notebook (tested with version 5.7.8, but should likely also work with all newer and most older versions).\n",
+    "- The python libraries numpy, scipy, scikit-learn (at least 0.22), pandas, matplotlib, and mlextend.\n",
+    "\n",
+    "We recommend to setup a local environment as follows: \n",
+    "- [Install Python](https://realpython.com/installing-python/)\n",
+    "- [Install Jupyter Notebook](https://jupyter.org/install). We recommend installation with pip, because you get this delivered with Python. More experienced users can also use conda. \n",
+    "- Install the required libraries with pip (```pip install numpy scipy scikit-learn pandas matplotlib mlextend```)\n",
+    "\n",
+    "Afterwards, you should be able to fire up your installation of Jupyter and open the notebooks. \n",
+    "\n",
+    "## State of the Online Book\n",
+    "\n",
+    "This online book is still a work-in-progress and it will take some time before this is completed. This section summarizes the current state.\n",
+    "\n",
+    "- Chapter 1: Content complete, requires proof reading.\n",
+    "- Chapter 2: Content complete, requires proof reading.\n",
+    "- Chapter 3: Content complete, requires proof reading.\n",
+    "- Chapter 4: Content complete, requires proof reading.\n",
+    "- Chapter 5: Not available.\n",
+    "- Chapter 6: Not available.\n",
+    "- Chapter 7: Not available.\n",
+    "- Chapter 8: Not available.\n",
+    "- Chapter 9: Not available.\n",
+    "- Chapter 10: Not available.\n",
+    "- Chapter 11: Not available.\n",
+    "- Chapter 12: Not available.\n",
+    "- Other issues: \n",
+    " - Layout mostly done. \n",
+    " - Need to determine if overflows for verbatim output of code cells can be prevented. \n",
+    " - Possibly change start of chapters to look better on home page.\n",
+    " \n",
+    " If you find problems (e.g., spelling errors in chapters that are already proof read, blunders on my part like wrong formulas, or similar), please [open an issue on GitHub](https://github.com/sherbold/intro-to-data-science/issues)."
    ]
   }
  ],
