remove title from toc and update chapters accordingly

--- a/content/02_Process.ipynb
+++ b/content/02_Process.ipynb
@@ -4,13 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Process of Data Science Projects\n",
-    "\n",
-    "Contents:\n",
-    "\n",
-    "- Generic Process Model\n",
-    "- Roles within Data Science Projects\n",
-    "- Core Deliverables"
+    "# The Process of Data Science Projects"
    ]
   },
   {
