--- a/content/03_Data-Exploration.ipynb
+++ b/content/03_Data-Exploration.ipynb
@@ -4,13 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Exploration\n",
-    "\n",
-    "Contents:\n",
-    "\n",
-    "- Overview of Data Exploration\n",
-    "- Summary statistics\n",
-    "- Visualization for Data Exploration"
+    "# Data Exploration"
    ]
   },
   {
