--- a/content/01_Introduction.ipynb
+++ b/content/01_Introduction.ipynb
@@ -4,13 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction\n",
-    "\n",
-    "Contents:\n",
-    "\n",
-    "- Introduction to Big Data\n",
-    "- Data Science and Business Intelligence\n",
-    "- The Skills of Data Scientists"
+    "# Big Data and Data Science"
    ]
   },
   {
