started work on chapter 5, experiment with formatting

--- a/content/00_Preface.ipynb
+++ b/content/00_Preface.ipynb
@@ -52,7 +52,7 @@
     "- Chapter 2: Content complete, requires proof reading.\n",
     "- Chapter 3: Content complete, requires proof reading.\n",
     "- Chapter 4: Content complete, requires proof reading.\n",
-    "- Chapter 5: Not available.\n",
+    "- Chapter 5: Incomplete.\n",
     "- Chapter 6: Not available.\n",
     "- Chapter 7: Not available.\n",
     "- Chapter 8: Not available.\n",
