draft of chapter 5

--- a/content/00_Preface.ipynb
+++ b/content/00_Preface.ipynb
@@ -35,12 +35,12 @@
     "\n",
     "- Python 3.6 or newer.\n",
     "- Jupyter Notebook (tested with version 5.7.8, but should likely also work with all newer and most older versions).\n",
-    "- The python libraries numpy, scipy, scikit-learn (at least 0.22), pandas, matplotlib, and mlextend.\n",
+    "- The python libraries numpy, scipy, scikit-learn (at least 0.22), pandas, matplotlib, and mlxtend.\n",
     "\n",
     "We recommend to setup a local environment as follows: \n",
     "- [Install Python](https://realpython.com/installing-python/)\n",
     "- [Install Jupyter Notebook](https://jupyter.org/install). We recommend installation with pip, because you get this delivered with Python. More experienced users can also use conda. \n",
-    "- Install the required libraries with pip (```pip install numpy scipy scikit-learn pandas matplotlib mlextend```)\n",
+    "- Install the required libraries with pip (```pip install numpy scipy scikit-learn pandas matplotlib mlxtend```). This may require sudo/admin rights. You can also install this in your user space if you add ``--user`` to the command. \n",
     "\n",
     "Afterwards, you should be able to fire up your installation of Jupyter and open the notebooks. \n",
     "\n",
@@ -64,8 +64,8 @@
     " - Layout mostly done. \n",
     " - Need to determine if overflows for verbatim output of code cells can be prevented. \n",
     " - Possibly change start of chapters to look better on home page.\n",
-    " \n",
-    " If you find problems (e.g., spelling errors in chapters that are already proof read, blunders on my part like wrong formulas, or similar), please [open an issue on GitHub](https://github.com/sherbold/intro-to-data-science/issues)."
+    "\n",
+    "If you find problems (e.g., spelling errors in chapters that are already proof read, blunders on my part like wrong formulas, or similar), please [open an issue on GitHub](https://github.com/sherbold/intro-to-data-science/issues)."
    ]
   }
  ],
