--- a/content/00_Preface.ipynb
+++ b/content/00_Preface.ipynb
@@ -52,8 +52,8 @@
     "- Chapter 2: Content complete, requires proof reading.\n",
     "- Chapter 3: Content complete, requires proof reading.\n",
     "- Chapter 4: Content complete, requires proof reading.\n",
-    "- Chapter 5: Incomplete.\n",
-    "- Chapter 6: Not available.\n",
+    "- Chapter 5: Content complete, requires proof reading.\n",
+    "- Chapter 6: Incomplete.\n",
     "- Chapter 7: Not available.\n",
     "- Chapter 8: Not available.\n",
     "- Chapter 9: Not available.\n",
