proofreading of chapters 0,1,2 and more content for chapter 6

--- a/content/00_Preface.ipynb
+++ b/content/00_Preface.ipynb
@@ -8,30 +8,30 @@
     "\n",
     "Welcome to the online book *Introduction to Data Science*. This book is created to provide a great resource for asynchronous online learning to deal with the current pandemic, where physical lectures are not possible and not all participants may be able to attend lectures, e.g., due to health issues or just because you have to care of a kid. \n",
     "\n",
-    "However, this online book is more than just a short term fix due to the pandemic. The book is an interactive guide for getting started with data science. All code that is used, e.g., to perform analysis, create visualizations, etc. is directly included and can be re-used by others.\n",
+    "However, this online book is more than just a short term fix due to the pandemic. This book is an interactive guide for getting started with data science. All code that is used, e.g., to perform analysis or to create visualizations is included and can be re-used by anyone.\n",
     "\n",
     "## Target audience\n",
     "\n",
-    "The primary audience are students, who visit my courses at the university. These students usually have (some) computer science background, but there are also alway interested students who have only little knowledge about computer science. The goal is that all audience who are interested in data science can follow most of the book. \n",
+    "The primary audience are students, who visit my courses at the university. These students usually have (some) computer science background, but there are also always interested students who have only little prior knowledge of computer science. The book is written such that anyone interested in data science can follow *most* of the book, but maybe not every detail. \n",
     "\n",
     "## Prerequisites\n",
     "\n",
-    "In general, this course is designed to be relatively easy to follow for any student at the university level who has some affinity for working with data and ideally also the natural sciences. However, without at least some knowledge about mathematics and computer science, a complete understanding of the materials will not be possible, even though you should be able to understand most concepts. \n",
+    "In general, this book is designed to be relatively easy to follow for students at the university level who have some affinity for working with data and ideally also for programming and mathematics. However, without at least some knowledge about mathematics and computer science, a complete understanding of the materials will not be possible, even though you should be able to understand most concepts. \n",
     "\n",
     "The following skills are required for a complete understanding of this script:\n",
     "\n",
-    "- Basic programming skills, ideally also some Python knowledge. All contents of the script, with the exception of the programming examples, should be understandable without programming knowledge. \n",
+    "- Basic programming skills, ideally some Python knowledge. All contents of the script, with the exception of the programming examples, should be understandable without programming knowledge. \n",
     "- Mathematical notations commonly used in higher mathematics. Without this knowledge, you may not understand how all models for data analysis are working. Here are some example of simple formula that you should be able to read:\n",
     "  - $\\sum_{i=1}^n x_i$ (sum of the values $x_1$, ..., $x_n$)\n",
     "  - $\\Pi_{i=1}^n x_i$ (product of the values $x_1$, ..., $x_n$)\n",
     "  - $x = (x_1, ..., x_d) \\in \\mathbb{R}^d$ ($x$ is a $d$-dimensional real valued vector)\n",
-    "- Stochastics, especially random variables and their distributions, e.g. normal/gaussian distribution, uniform distribution, exponential distribution, and binomial distribution. Without this knowledge you will have trouble understanding certain problems with data and - sometimes - models.\n",
+    "- Stochastics, especially random variables and their distributions, e.g. normal/gaussian distribution, uniform distribution, exponential distribution, and binomial distribution. Without this knowledge you will have trouble understanding certain problems with data and models.\n",
     "\n",
     "## Installation of Required Software\n",
     "\n",
-    "This script is provided has Online Book and as Jupyter Notebooks. You can download the Jupyter Notebooks or each chapter using the download link at the top of the page. A PDF with the content of all chapters is also planned, but not yet available. \n",
+    "This online book is written using Juypter Notebooks. You can download the Jupyter Notebooks of each chapter using the download link at the top of the pages. A PDF with the content of all chapters is also planned, but not yet available. \n",
     "\n",
-    "If you want to run the script yourself, i.e., execute the code examples provided, you must install the required software. These are\n",
+    "If you want to run the Jupyter Notebooks yourself, i.e., execute the code examples provided, you must install the required software. These are\n",
     "\n",
     "- Python 3.6 or newer.\n",
     "- Jupyter Notebook (tested with version 5.7.8, but should likely also work with all newer and most older versions).\n",
@@ -42,14 +42,16 @@
     "- [Install Jupyter Notebook](https://jupyter.org/install). We recommend installation with pip, because you get this delivered with Python. More experienced users can also use conda. \n",
     "- Install the required libraries with pip (```pip install numpy scipy scikit-learn pandas matplotlib mlxtend```). This may require sudo/admin rights. You can also install this in your user space if you add ``--user`` to the command. \n",
     "\n",
-    "Afterwards, you should be able to fire up your installation of Jupyter and open the notebooks. \n",
+    "\n",
+    "You should now be able to fire up your installation of Jupyter with the command ```jupyter notebook```. Jupyter Notebook runs in the browser and initially shows the home folder in your local file system. You can navigate to the destination where you downloaded the notebooks and open them. You could also upload them to the currently open folder using the browser. \n",
+    "\n",
     "\n",
     "## State of the Online Book\n",
     "\n",
-    "This online book is still a work-in-progress and it will take some time before this is completed. This section summarizes the current state.\n",
+    "This online book is still a work-in-progress and it will take some time before the book is finished. This section summarizes the current state.\n",
     "\n",
-    "- Chapter 1: Content complete, requires proof reading.\n",
-    "- Chapter 2: Content complete, requires proof reading.\n",
+    "- Chapter 1: Finished.\n",
+    "- Chapter 2: Finished.\n",
     "- Chapter 3: Content complete, requires proof reading.\n",
     "- Chapter 4: Content complete, requires proof reading.\n",
     "- Chapter 5: Content complete, requires proof reading.\n",
@@ -60,10 +62,8 @@
     "- Chapter 10: Not available.\n",
     "- Chapter 11: Not available.\n",
     "- Chapter 12: Not available.\n",
-    "- Other issues: \n",
-    " - Layout mostly done. \n",
+    "- General layout issues: \n",
     " - Need to determine if overflows for verbatim output of code cells can be prevented. \n",
-    " - Possibly change start of chapters to look better on home page.\n",
     "\n",
     "If you find problems (e.g., spelling errors in chapters that are already proof read, blunders on my part like wrong formulas, or similar), please [open an issue on GitHub](https://github.com/sherbold/intro-to-data-science/issues)."
    ]
