--- a/content/06_Clustering.ipynb
+++ b/content/06_Clustering.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "When we think about how we can define a cities, we may do so by using the town halls as reference points. A simple concept would be to say that each house belongs to the city, whose town hall is closest. This is the essence of the concept of the $k$-Means algorithm: we describe clusters by their *center*. These centers are also called *centroids* and $k$-means is an example for *centroid-based clustering*. \n",
     "\n",
-    "If we want to know to which cluster an instance belongs, we just look for the closest center. The $k$ defines the number of clusters. Formally, we have cluster centers $C_1, ..., C_k \\in \\mathcal {F}$ and a distance metric $d$. We can determine the cluster of any instance $x \\in \\mathcal{F}$ as $c(x) = argmin_{i=1,...,k} d(x, C_i)$. The following figure visualizes how data is divided into $k=4$ clusters. The centers are shown by the large grey points, the colors indicate to which cluster each instance belongs. "
+    "If we want to know to which cluster an instance belongs, we just look for the closest center. The $k$ defines the number of clusters. Formally, we have cluster centers $C_1, ..., C_k \\in \\mathcal {F}$ and a distance metric $d$. We can determine the cluster of any instance $x \\in \\mathcal{F}$ as $$c(x) = argmin_{i=1,...,k} d(x, C_i).$$ The following figure visualizes how data is divided into $k=4$ clusters. The centers are shown by the large grey points, the colors indicate to which cluster each instance belongs. "
    ]
   },
   {
@@ -375,7 +375,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## EM Clustering"
+    "## EM Clustering\n",
+    "\n",
+    "### General Idea\n",
+    "\n",
+    "Another way to look at cities and houses is to think of them as random variables. The assignment of houses to cities is then guided by probability distributions. This is an extension of the idea behind $k$-Means. Our town hall is still the same, i.e., the center. However, we acknowledge that houses closer to the town hall are more likely to belong the the city than houses that are farther away. We actually go one step further and define cities not only based on the location of the town hall, but also by the variability of the houses, i.e., how spread out the houses of the cities are. This concept is called *distribution-based clustering*. \n",
+    "\n",
+    "Formally, we have a number of clusters $k$ that are described by random variables $C_1, ..., C_k$. We can calculate the probability that an instance belongs to a cluster $P(C_i = x), i=1,...,k$. Each instance is assigned to the *most likely* cluster, i.e., the cluster $C_i$ where the $P(C_i = x)$ is maximized. Consequently, our clustering is defined as \n",
+    "$$c(x) = \\max_{i=1,..., k} P(C_i = x).$$\n",
+    "\n",
+    "While this concepts work in general with any probability distribution, we only use normally distributed random variables to describe the clusters in the following. This is also known as *Gaussian Mixture Model*. Please note that these normal distributions are multivariate, i.e., not just for one dimension, but for as many dimensions as we have features. A univariate normal distribution is described by the mean value and the standard deviation. In comparison, a multivariate normal distribution is described by a vector of mean values and a *covariance matrix*. The covariances describe the relationship between the variances in the different dimensions. A bit simplified, you can think of the covariances as the stretching of the bell-shape of the normal distribution in the different directions. Mathematically, the covariances describe an ellipse. One aspect that is important for us that the covariance matrix is square matrix. Thus, if we have $d$ features, there are $d+d^2$ parameters that describe the multivariate normal distribution, $d$ mean values and a $d\\times d$ covariance matrix. This means that we have $k(d+d^2)$ parameters when we want to describe $k$ clusters. \n",
+    "\n",
+    "The following figure shows an example for the result of EM clustering with $k=4$ normal distributions fit to the same data we already used to show how $k$-Means works. The mean values are shown by the large gray points, the covariances by the colored ellipses. "
    ]
   },
   {
@@ -446,6 +457,17 @@
     "    ell.set_alpha(0.5)\n",
     "    ax.add_artist(ell)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While the concept of clustering with random variables as clusters is a bit more complex, the figure already shows the advantage: because we do not just have the mean value, but also the covariances, the clusters also describe how they are *spread*. Thus, we have more information about the data encoded in the cluster. \n",
+    "\n",
+    "### The Algorithm\n",
+    "\n",
+    "This type of clustering has is called EM clustering because of the algorithm used to determine the parameters of the clusters is called the *Expectation-Maximization algorithm*. "
    ]
   },
   {
@@ -548,7 +570,11 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide_input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -592,7 +618,11 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide_input"
+    ]
+   },
    "outputs": [
     {
      "data": {
