more on EM clustering

--- a/content/06_Clustering.ipynb
+++ b/content/06_Clustering.ipynb
@@ -467,7 +467,19 @@
     "\n",
     "### The Algorithm\n",
     "\n",
-    "This type of clustering has is called EM clustering because of the algorithm used to determine the parameters of the clusters is called the *Expectation-Maximization algorithm*. "
+    "This type of clustering has is called EM clustering because of the algorithm used to determine the parameters of the clusters is called the *Expectation-Maximization algorithm*. The algorithm is in general similar to the $k$-Means algorithm we already know: we start with randomly initialized clusters and then iteratively update the clusters to better match the data. For the EM algorithm, the initialization means random mean values and random covariance matrices. Updates mean that the mean values and covariances are updated such that the *likelihood* that the data can be explained by the clusters is increased. We do not discuss the complete mathematical description of the EM algorithm, but rather look at a simplified version, where we update only the mean values and ignore the updates of the covariances. \n",
+    "\n",
+    "1. Randomly select initial normal distributions $C_1 \\sim (\\mu_1, \\Sigma_1), ..., C_k \\sim (\\mu_k, \\Sigma_k)$ with $\\mu_i \\in \\mathcal{F}$ the mean values and $\\Sigma_i \\in \\mathcal{F}\\times\\mathcal{F}$ the covariance matrices.\n",
+    "2. Expectation Step: Determine weights $$w_i(x) = \\frac{p(x|\\mu_i, \\Sigma_i)}{\\sum_{j=1}^k p(x|\\mu_j, \\Sigma_j)}$$ for all $x \\in X$. \n",
+    "3. Maximization Step: Update mean values as\n",
+    "$$\\mu_i = \\frac{1}{|X|}\\sum_{x \\in X} w_i(x)\\cdot x$$\n",
+    "4. Repeat steps 2 and 3 until\n",
+    "  - Convergence, i.e., the clusters $C_i, i=1,...,k$  do no change anymore.\n",
+    "  - A predefined maximum number of iterations is reached.\n",
+    "\n",
+    "The biggest difference between the EM algorithm and the $k$-Means algorithm are the weights. The weights specify the likelihood that and instance $x \\in X$ belongs the a specific cluster. For example, if $w_i(x)=0.9$ it means that the likelihood is that $x$ belongs to cluster $C_i$ is 90%. The cluster assignment follows the same rule as above, i.e., $x$ is assigned to the cluster with that maximizes the weight $c(x) = max_{i=1, ..., k} w_i(x)$. Still, EM also allows insights if points are uncertain, i.e., multiple clusters have similar likelihoods. This is called *soft clustering*, because theoretically each point does not belong to a single cluster, but to all clusters with a certain likelihood. \n",
+    "\n",
+    "To better understand how the EM algorithm works, we again look at how the update steps work to fit the data."
    ]
   },
   {
@@ -517,6 +529,24 @@
     "        ell.set_alpha(0.5)\n",
     "        ax.add_artist(ell)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is what happens:\n",
+    "\n",
+    "- Iteration 1: We start with four normal distributions that are almost the same. The mean values are in the middle of the data, the covariances are ellipses that elongated in the diagonal, but slightly different. For example, we can see that the green covariance ellipse goes a bit more to the bottom left, and that the yellow one goes a bit more to the top right. This already shows in the assignment of the instances to the clusters: the instances in the top-right corner belong to the yellow cluster, the instances on the left side belong to the green cluster. The other two clusters are not really visible due to the overlap. \n",
+    "- Iteration 21: After 21 iterations we see that the four normal distributions start to drift apart. The yellow one is pulled into the top-right corner, but still has a large covariance ellipse. The green one actually is \"torn\" between the instances on the left and the instances at the bottom. The blue one is in the middle with a relatively small covariance. The small covariance is an indicator that the blue cluster will not move strongly anymore and stay in the middle. The purple cluster is also in the middle, but still has a very large covariance, which means that it will likely still move elsewhere. \n",
+    "- Iteration 41: The clusters begin to converge. The yellow cluster finished its journey to the top-left corner and now covers only that region. Similarly, the blue cluster covers the points in the middle. This pushed the purple cluster to the left side, where it is now residing with a considerably smaller covariance than in iteration 21. The green cluster is still torn between the left side and the bottom, but start to drift to the bottom, because purple now claims most of the left. \n",
+    "- Iteration 61: The clusters converged. Purple now covers the instances on the left and green moved to the instances at the bottom.\n",
+    "\n",
+    "In the above example we also see two important properties of EM clustering. First, the convergence is much slower than with $k$-Means. There are more parameters that must be optimized, i.e., not only the mean values but also the covariances. Additionally, the soft clustering means that instances belong to all clusters. This slows the movement of the mean values, because they get a (weak) pull from many instances, especially when the covariance is large. \n",
+    "\n",
+    "Second, we see that the clusters may cover disjoint regions. For example, in iteration 41, the green cluster contains the instances at the bottom, and some instances on the left side. Between these instances are purple instances, i.e., there are two disjoint regions of the green cluster. This is possible due to the shape of the covariances. Because green has a larger covariance, points that are farther away from the mean have a higher probability of being green than purple, because of the low covariance. This effect of disjoint regions is something that cannot be observed with many clustering algorithms. For example, this is impossible with $k$-Means, because distances change the same in all directions. \n",
+    "\n",
+    "### Selecting $k$"
    ]
   },
   {
