started dbscan and added appendix

--- a/content/00_Preface.ipynb
+++ b/content/00_Preface.ipynb
@@ -62,6 +62,7 @@
     "- Chapter 10: Not available.\n",
     "- Chapter 11: Not available.\n",
     "- Chapter 12: Not available.\n",
+    "- Appendix: Work in progress.\n",
     "- General layout issues: \n",
     " - Need to determine if overflows for verbatim output of code cells can be prevented. \n",
     "\n",
