--- a/content/06_Clustering.ipynb
+++ b/content/06_Clustering.ipynb
@@ -684,7 +684,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DBSCAN"
+    "## DBSCAN\n",
+    "\n",
+    "### General Idea\n",
+    "\n",
+    "So far, we relied on the town halls as reference points for the definition of cities. However, we can also ignore the town halls and just look at the neighbors. Just look outside. The houses that are close to your house are your neighbors and belong to the same city. The neighbors of your neighbors as well. And all neighbors of neighbors of .... of neighbors, until all houses that have a direct or indirect neighborhood relationship are part of the city. This is the concept of *density-based clustering*: regions that are *dense*, i.e., where all points are neighbors of each other, as well as all neighbors of neighbors belong to the same cluster. \n",
+    "\n",
+    "This approach for clustering is fundamentally different from $k$-Means and EM clustering, because we do not have a formula that we can use to determine to which cluster an instance belongs. Instead, the instances themselves define the clusters. Thus, if we want to know to which cluster an instance belongs, we must look at the neighbors. \n",
+    "\n",
+    "The most common density based clustering algorithm is DBSCAN. The following figure visualizes the results of the DBSCAN clustering of our sample data. "
    ]
   },
   {
@@ -733,6 +741,23 @@
     "axes[1].scatter(X[~noise_mask, 0], X[~noise_mask, 1], c=dbscan.labels_[~noise_mask], s=20)\n",
     "axes[1].scatter(X[noise_mask, 0], X[noise_mask, 1], c='Grey', s=20, marker='x')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see four clusters that are similar to the results of $k$-Means and EM clustering. However, there are also some instances that are marked as grey x. These are *noise*, i.e., instance that do not belong to any cluster. This can happen, if instances are not in a dense neighborhood. This is the same as houses that are outside the boundaries of cities. \n",
+    "\n",
+    "### The Algorithm\n",
+    "\n",
+    "The algorithm for DBSCAN requires a concept for what a *dense neighborhood* is. A neighborhood is defined using a distance $\\epsilon\\in \\mathbb{R}$ such that $neighbors(x) = \\{x' \\in X: d(x, x') \\leq \\epsilon\\}$. A neighborhood is called dense, if it has more than $minPts \\in \\mathbb{N}$ points. We call all points $x \\in X$ that have a dense neighborhood core points. \n",
+    "\n",
+    "Once we know all core points, we simply *grow* clusters. We randomly pick a core point and define that this core point belongs to the first cluster. We then add all instances that are neighbors of the core point to the cluster. We repeat this for all core points there were added to the cluster, until we have all neighbors of all core points within the cluster. \n",
+    "\n",
+    "1. Pick a core point $x \\in X$ and start a new cluster $C_i$. \n",
+    "2. Add all neighbors of core points in $C_i$ to the cluster, i.e., $C_i = \\bigcup_{x \\in core(C_i)} neighbors(x)$.\n",
+    "3. Repeat step two until no additional points are added. "
    ]
   },
   {
