start of chapter 7

--- a/content/00_Preface.ipynb
+++ b/content/00_Preface.ipynb
@@ -56,7 +56,7 @@
     "- Chapter 4: Content complete, requires proof reading.\n",
     "- Chapter 5: Content complete, requires proof reading.\n",
     "- Chapter 6: Content complete, requires proof reading.\n",
-    "- Chapter 7: Not available.\n",
+    "- Chapter 7: Work in progress.\n",
     "- Chapter 8: Not available.\n",
     "- Chapter 9: Not available.\n",
     "- Chapter 10: Not available.\n",
