better formatting of confusion matrix

--- a/content/07_Classification.ipynb
+++ b/content/07_Classification.ipynb
@@ -132,8 +132,8 @@
     "The most important tool for the analysis of the quality of hypothesis is the *confusion matrix*, a tabular description of how often the hypothesis is correct and how often it is incorrect, i.e., confused. The confusion matrix four our image classification example may look like this. \n",
     "\n",
     "<table>\n",
-    "    <tr><td rowspan=5><br><br><b>Predicted class</b></td><td></td><td colspan=2><b>Actual class</b></td><td></td></tr>\n",
-    "    <tr><td><td><b>whale</b></td><td><b>bear</b></td><td><b>other</b></td></tr>\n",
+    "    <tr><td></td><td colspan=4><b>Actual class</b></td></tr>\n",
+    "    <tr><td rowspan=4><br><br><b>Predicted class</b></td><td><td><b>whale</b></td><td><b>bear</b></td><td><b>other</b></td></tr>\n",
     "    <tr><td><b>whale</b></td><td>29</td><td>1</td><td>3</td></tr>\n",
     "    <tr><td><b>bear</b></td><td>2</td><td>22</td><td>13</td></tr>\n",
     "    <tr><td><b>other</b></td><td>4</td><td>11</td><td>51</td></tr>\n",
@@ -146,8 +146,8 @@
     "The binary confusion matrix is the special case of the confusion matrix for binary classification problems with the classes true and false. In general, the binary confusion matrix looks like this. \n",
     "\n",
     "<table>\n",
-    "    <tr><td rowspan=4><br><br><b>Predicted class</b></td><td colspan=2><b>Actual class</b></td><td></td></tr>\n",
-    "    <tr><td><td><b>true</b></td><td><b>false</b></td></tr>\n",
+    "    <tr><td></td><td colspan=3><b>Actual class</b></td></tr>\n",
+    "    <tr><td rowspan=3><br><br><b>Predicted class</b></td><td><td><b>true</b></td><td><b>false</b></td></tr>\n",
     "    <tr><td><b>true</b></td><td>true positive (TP)</td><td>false positive (FP)</td></tr>\n",
     "    <tr><td><b>false</b></td><td>false negative (FN)</td><td>true negative (TN)</td></tr>\n",
     "</table>\n",
